<resources>
    <string name="app_name">Color My Views</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="how_to">How to play</string>
    <string name="instruction">Click on the boxes to change the colors</string>
    <string name="red_string">Red</string>
    <string name="blue_string">Blue</string>
    <string name="yellow_string">yellow</string>
</resources>
