<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/margin_wide"
            android:layout_marginLeft="@dimen/margin_wide"
            android:layout_marginRight="@dimen/margin_wide"
            android:id="@+id/box_one_text"
            style="@style/WhiteBox"
            android:text="@string/box_one"/>
    <TextView
            android:text="@string/box_two"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/box_two_text" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/box_one_text" style="@style/WhiteBox"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/box_three"
            android:layout_height="wrap_content"
            android:id="@+id/box_three_text"
            app:layout_constraintBottom_toTopOf="@+id/box_four_text"
            app:layout_constraintTop_toTopOf="@+id/box_two_text" style="@style/WhiteBox" android:layout_width="0dp"
            app:layout_constraintStart_toEndOf="@+id/box_two_text" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/box_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_four_text"
            app:layout_constraintTop_toBottomOf="@+id/box_three_text"
            app:layout_constraintBottom_toTopOf="@+id/box_five_text" style="@style/WhiteBox"
            app:layout_constraintStart_toEndOf="@+id/box_two_text" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>
    <TextView
            android:text="@string/box_five"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_five_text"
            app:layout_constraintBottom_toBottomOf="@+id/box_two_text"
            app:layout_constraintTop_toBottomOf="@+id/box_four_text"
            style="@style/WhiteBox" app:layout_constraintStart_toEndOf="@+id/box_two_text"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/how_to_text" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/box_five_text"/>
    <TextView
            android:text="@string/how_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/how_to_text" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="4dp" app:layout_constraintBaseline_toBaselineOf="@+id/textView"
            android:textSize="25sp"/>
    <Button
            android:text="@string/red_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/red_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/blue_button" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/blue_button"/>
    <Button
            android:text="@string/yellow_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yellow_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/blue_button"
            app:layout_constraintStart_toEndOf="@+id/blue_button"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/blue_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/blue_button"
            app:layout_constraintStart_toEndOf="@+id/red_button" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/yellow_button" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintVertical_bias="1.0"/>

</android.support.constraint.ConstraintLayout>